<resources>
    <string name="app_name">Popular Movies 1</string>

    <!--Menu Options -->
    <string name="popular_sort">Popular Movies</string>
    <string name="highest_rated_sort">Highest Rated</string>
    <string name="favourite">Favourites</string>
    <string name="title_activity_movie_details">MovieDetails</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

    </string>
    <string name="action_settings">Settings</string>
    <string name="title">Movie Title:</string>
    <string name="overview">Plot Synopsis:</string>
    <string name="rating">Rating:</string>
    <string name="release">Release Date:</string>
    <string name="no_internet">Please check your internet connection</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="pg_one">Page One</string>
    <string name="trailer">Trailer:</string>
    <string name="review">Review:</string>


    <string name="popular">popular</string>
    <string name="top_rated">top_rated</string>
    <string name="internet_error">internetError</string>
    <string name="fav">favorite</string>
    <string name="empty_fav">No favorite movies</string>
    <string name="load_error">loadError</string>
    <string name="load_list_err">There was an error loading list</string>
    <string name="empty"></string>


</resources>
